Fix tee display and album display on mobile

--- a/pages/graphics/graphics.less
+++ b/pages/graphics/graphics.less
@@ -74,7 +74,7 @@
         filter: saturate(0.3) blur(2px) opacity(0.7);
 
         picture {
-          display: block;
+          display: flex;
           box-shadow: 0 3px 3px 2px rgba(0, 0, 0, 0.35);
         }
 
@@ -515,11 +515,11 @@
 
     .single-tee {
       cursor: pointer;
-      width: 25%;
+      width: 80px;
       transition: all 0.2s ease-in-out;
 
       @media only screen and (min-width: 786px) {
-        width: 16.66667%;
+        width: 150px;
       }
 
       &.rotateNone { transform: rotate(0) }
@@ -544,7 +544,7 @@
 
   .single-tee-hires-wrap,
   .album-hires-wrap {
-    background: #222;
+    background: #222222EE;
     position: fixed;
     top: 50vh;
     bottom: 50vh;
@@ -580,8 +580,8 @@
     bottom: 50%;
 
     &.active {
-      top: 13%;
-      bottom: 0;
+      top: 20%;
+      bottom: -20%;
       z-index: 40;
 
       .expand-close {
